# inheritance-practice-michelle

./: CMakeCache.txt  CMakeLists.txt  Employee.cpp  Employee.h  HourlyEmployee.cpp  HourlyEmployee.h  Makefile  README.md  SalariedEmployee.cpp  SalariedEmployee.h  cmake_install.cmake  main  main.cpp
B/: CMakeCache.txt  Makefile  cmake_install.cmake
